[gd_scene load_steps=8 format=1]

[ext_resource path="res://partida/partida.gd" type="Script" id=1]
[ext_resource path="res://fondos/scroll_fondo_infinito.gd" type="Script" id=2]
[ext_resource path="res://fondos/darkPurple.png" type="Texture" id=3]
[ext_resource path="res://menus/fnt_8b22.tres" type="DynamicFont" id=4]
[ext_resource path="res://sonido/libreria.tres" type="SampleLibrary" id=5]
[ext_resource path="res://gui/teclado.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource/name = "desvanecerse"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 1.5, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1.5, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="partida" type="Node"]

script/script = ExtResource( 1 )
nivel = 1
jugadores = 2

[node name="fondo" type="ParallaxBackground" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="fondo"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 255 )
script/script = ExtResource( 2 )
velocidad = 200
direccion = 2
mirroring = 256

[node name="fondo" type="TextureFrame" parent="fondo/ParallaxLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="guiNivel" type="Label" parent="."]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 4 )
text = "NIVEL"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="guiPuntos1" type="Label" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 200.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 4 )
text = "P1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="guiPuntos2" type="Label" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 4 )
text = "p2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sonidos" type="SamplePlayer" parent="."]

config/polyphony = 4
config/samples = ExtResource( 5 )
default/volume_db = -10.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 0.5
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="teclado" type="Sprite" parent="."]

visibility/opacity = 0.5
transform/pos = Vector2( 960, 700 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="teclado"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/desvanecerse = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "desvanecerse"


